# RAG-Evaluation

./: .env.example  .gitignore  README.md  evaluation.md  pyproject.toml
aufgaben/: 1_Setup.md  1_Setup_Cloud.md  2_1_Evaluierungsplattformen.md  2_2_Metriken.md  2_3_Test_Dataset.md  3_1_Modell-Optimierung.md  3_2_Prompt-Optimierung.md  3_3_Basic_Chunking.ipynb  4_1_Semantic_Chunking.ipynb  4_2_Hybrid_Search.ipynb  4_3_Reranking.ipynb  4_4_Query_Expansion.ipynb  4_4_Query_Expansion.md  4_5_Graph_RAG.md  4_5_Knowledge_Graphs.md  5_RAG_Challenge.md  5_RAG_RAG.md
frontend/: .dockerignore  .env.local  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  backend-client.ts  index.css  use-session-state.ts
frontend/src/components/chat-input/: chat-input.css  chat-input.tsx
frontend/src/components/chat-window/: chat-window.css  chat-window.tsx
frontend/src/components/header/: header.css  header.tsx
frontend/src/components/message-bubble/: message-bubble.css  message-bubble.tsx
frontend/src/components/spinner/: spinner.css  spinner.tsx
infrastructure/: langfuse_local.yml  langfuse_server.yml  neo4j.yml
src/advanced_rag/: __init__.py
src/advanced_rag/backend/: .gitignore  environment.py  main.py
src/advanced_rag/backend/core/: application.py  graph_application.py  retrieval_type.py
src/advanced_rag/backend/data_models/: conversation_state.py  message.py  response_dto.py
src/advanced_rag/evaluation/: evaluate_dataset.py  upload_datasets.py
src/advanced_rag/scraping/: crawlee_scraper.py  scraping.py
(+507 files in other folders)
