[project]
name = "advanced-rag"
version = "0.1.0"
description = "Advanced RAG system with LangChain, Neo4j, and ChromaDB"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "python-dotenv>=1.1.1",
    "langfuse>=3.1.1",
    "pydantic>=2.11.7",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langgraph>=0.5.1",
    "chromadb>=1.0.15",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langchain-neo4j>=0.4.0",
    "langchain-experimental>=0.3.4",
    "unstructured[md,pdf]>=0.18.2",
    "markdown>=3.8.2",
    "requests>=2.32.4",
    "aiohttp>=3.11.11",
    "langchain-text-splitters>=0.3.8",
    "beautifulsoup4>=4.13.4",
    "ragas>=0.2.15",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.0.0",
    "neo4j>=5.28.1",
    "langchain-unstructured>=0.1.6",
    "tqdm>=4.67.1",
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "wikipedia>=1.4.0",
    "crawlee[beautifulsoup,playwright]>=1.0.4",
]

[project.optional-dependencies]
# Optional dependencies for question generation
question-generation = [
    "giskard[llm]>=2.17.0",
    "llama-index>=0.12.47",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_rag"]

[tool.uv]
# No dev dependencies currently

[tool.uv.sources]
